Capa página Vivianização

--- a/consultoria.html
+++ b/consultoria.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css" />
 	<link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,700,300italic' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Shadows+Into+Light+Two|Patrick+Hand" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Shadows+Into+Light+Two|Merienda" rel="stylesheet">
 	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/animat/animate.min.css" />
 	<link rel="stylesheet" href="css/fancybox/jquery.fancybox.css" />
@@ -82,8 +83,8 @@
 	
 	<section id="banner" class="banner menu"></section><!-- End of Banner Section -->
 
-	<section id="abouts" class="abouts sections" style="background: transparent;">
-		<div class="container" style="width: 98%; margin-top: 95px; margin-right: -15px;">
+	<section id="abouts" class="abouts sections" style="background: #fff;">
+		<div class="container" style="width: 98%; margin-right: -15px;">
 			<div class="row">
 				<div class="main_abouts main_servicos">
 					<div class="col-md-12 col-sm-12 col-xs-12">
