--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 					</div>
 					<div class="col-md-3">
 						<div class="sinle_features wow slideInUp" data-wow-duration="1.5s">
-							<img src="images/viviano.jpg"/>
+							<img src="images/viviano.jpg" class="round"/>
 							<a class="text-center col-md-12" href="http://www.alimentos.bio.br/site/memorias.pdf" target="_blank">Viviano Cabrera Trigo</a>
 						</div>
 					</div>
@@ -135,7 +135,7 @@
 				<div class="features_content text-right">
 					<div class="col-md-3">
 						<div class="sinle_features wow slideInUp" data-wow-duration="1.5s">
-							<img src="images/lacre.jpg"/>
+							<img src="images/lacre.jpg" class="round"/>
 						</div>
 					</div>
 					<div class="col-md-9">
@@ -349,7 +349,7 @@
 							<br/>
 							<p><img src="images/check.png" /> Acessoria para melhor aproveitamento de insumos para limpeza de equipamentos/ambientes.</p>
 							<br/>
-							<p><img src="images/check.png" /> Assessoria na criação de procedimentos e treinamento de assepsia na produção.</p>
+							<p><img src="?images/check.png" /> Assessoria na criação de procedimentos e treinamento de assepsia na produção.</p>
 					</div>
 				</div>
 			</div>
