--- a/vivianizacao.html
+++ b/vivianizacao.html
@@ -5,7 +5,7 @@
 	<title>Instituto Alimentos</title>
 	<link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css" />
 	<link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,700,300italic' rel='stylesheet' type='text/css'>
-	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Shadows+Into+Light+Two|Patrick+Hand" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Shadows+Into+Light+Two|Merienda" rel="stylesheet">
 	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/animat/animate.min.css" />
 	<link rel="stylesheet" href="css/fancybox/jquery.fancybox.css" />
@@ -82,73 +82,98 @@
 	
 	<section id="banner" class="banner menu"></section><!-- End of Banner Section -->
 
-	<section id="abouts" class="abouts sections" style="background: transparent;">
-		<div class="container" style="width: 98%; margin-top: 95px;">
-			<div class="row">
-				<div class="main_abouts main_servicos">
-					<div class="col-md-12 col-sm-12 col-xs-12">
-						<div class="single_abouts wow " data-wow-duration="2s">
-					<ul>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Bolsas de material plástico termoresistente (90°) de grau alimentar, apropriadas para a termoselagem.</li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Equipamento para termoselagem.</li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Recipiente para processamento de "n" litros de leite, com seus respectivos sistemas operacionais para aquecimento. </li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Sistema termométrico para medição da temperatura da operação.</li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Recipiente para termo-normalização da embalagem plástica do produto com água potável corrente. </li>
-					  <li class="slideInLeft"/>Túnel de ar para secar o produto embalado. </li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Termômetros em graus Celsius de preferência digitais.</li>
-					</ul>
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</section><!-- End of Abouts Section -->
-	
-	
-<!--<section id="abouts" class="abouts sections">
+	<section id="features" class="features vi">
 		<div class="container">
 			<div class="row">
-				<div class="main_abouts main_servicos">
-					<div class="col-md-12 col-sm-12 col-xs-12">
-						<div class="single_abouts wow " data-wow-duration="2s">
-					<ul>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Assessoramos para a obtenção de maior “vida útil” em  produtos alimentares, o que contribui para uma mais efetiva comercialização do  seu produto; assim, podemos solucionar problemas como fermentação precoce de  matérias primas e produtos finais.</li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Apontaremos as soluções para problemas como a oxidação  enzimática de alimentos e matérias primas (alterações de cor e obscurecimentos)  em matérias-primas em geral.</li>
-
-					  <img src="images/servicos.png" width="509" height="318" class="wow slideInRight pull-right" data-wow-duration="2s">
-					  <li class="wow slideInLeft" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Orientamos na seleção de matérias-primas economicamente  viáveis para a fabricação de alimentos. </li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Recomendamos parâmetros físico-químicos, tecnológicos  e microbiológicos para produtos alimentares em processamento e produtos finais.</li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Assessoramos no uso correto e na avaliação de qualidade  de produtos para sanitização e higiene de equipamentos e ambientes (sabões,  detergentes e desinfetantes). Treinamos seu pessoal no uso dos "<em>VCTests</em>", que indicarão a  efetividade e a economia obtidas. </li>
-					  <li class="slideInLeft"/>Oferecemos serviço de controle microscópico e  estereoscópico de sua produção e matéria primas de produção. </li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Oferecemos um serviço completo de controle de corpos  estranhos em sua produção (fragmentos de inseto, ácaros, sinais de roedores em  seu produto e matérias primas). Mediante a recepção de amostras (via correio), realizamos  o diagnóstico estereoscópico e microscópico da qualidade de seu produto.</li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Podemos transferir nossa tecnologia, com a qual se  prolonga a “vida útil”, as características originais e a qualidade de seu produto  (“<strong>vivianização</strong>”).</li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Consulte-nos também outras necessidades, que procuraremos  ajudá-lo.</li>
-					   <li class="wow slideInLeft" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Para   solicitar uma consultoria <a href="contato.html">clique aqui</a> ou entre em contato por telefone.   Assim que tivermos um parecer sobre suas necessidades encaminharemos um   orçamento pelos serviços do <strong>Assessoria e Consultoria</strong>.&nbsp; Após a confirmação do deposito no valor   estipulado, enviaremos um documento com as soluções e referencias necessárias   para esclarecimento da situação.</li>
-					</ul>
+				<div class="features_content">
+					<div class="col-md-12 text-center">
+						<div class="sinle_features wow slideInUp" data-wow-duration="1s">
+							<p>Criado por Viviano Cabrera Trigo, a <strong>vivianização</strong> é um processo seguro de conservação de alimentos
+						O processo de vivianização pode ser aplicado em diversos alimentos, abaixo citamos o leite como exemplo. </p>
+							
 						</div>
 					</div>
-
+					<div class="col-md-3">
+						<div class="sinle_features wow slideInUp text-center" data-wow-duration="1.5s">
+							<div class="round" style="width:270px; height: 270px; box-shadow: 0 0 1px 4px #2c8822;">
+								<h5 style="line-height: 270px; color:#2c8822">VIVIANIZAÇÃO</h5>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="sinle_features wow slideInUp text-left" data-wow-duration="1s">
+							<p><img src="images/check-white.png" /> Menor despesa ao consumidor</p>
+							<br/>
+							<p><img src="images/check-white.png" /> Maior validade</p>
+							<br/>
+							<p><img src="images/check-white.png" /> Sem conservantes</p>
+							<br/>
+							<p><img src="images/check-white.png" /> Alimento saudável</p>
+							<br/>
+							<p><img src="images/check-white.png" /> Rico em propriedasdes naturais</p>
+							<br/>
+							
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="sinle_features wow slideInUp text-right" data-wow-duration="1s">
+							<p>Maiorx despesa ao consumidor <img src="images/check-white.png" /></p>
+							<br/>
+							<p>Menor validade <img src="images/check-white.png" /></p>
+							<br/>
+							<p>Mais conservantes <img src="images/check-white.png" /></p>
+							<br/>
+							<p>Perda de nutrientes do alimento <img src="images/check-white.png" /></p>
+							<br/>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="sinle_features wow slideInUp text-center" data-wow-duration="1.5s">
+							<div class="round" style="width:270px; height: 270px; box-shadow: 0 0 1px 4px #b73737;">
+								<h5 style="line-height: 270px; color:#b73737">COMUM</h5>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section><!-- End of Abouts Section -->	
+	
+	
+<section id="abouts" class="abouts sections vi">
+		<div class="container">
+			<div class="row">
+				<div class="main_abouts">
+					<div class="col-md-6 col-sm-6 col-xs-12">
+						<div class="single_abouts wow slideInLeft" data-wow-duration="2s">
+							<div class="head_title text-center">
+								<h2>O QUE É</h2>
+								<div class="separetor"></div>
+					</div>
+					<div class="col-md-12 col-sm-12 col-xs-12">
+						<div class="single_abouts wow slideInLeft text-left" data-wow-duration="2s">
+							<p>É um processo seguro e natural para a conservação de alimentos em geral, em relação a outros processos atualmente usados, realizado com procedimentos economicamente ao alcance de qualquer pequeno produtor. No caso do leite, por exemplo, permite a estocagem no meio ambiente por dez dias ou mais, a temperaturas que não requerem grande consumo de eletricidade.
+Mantém as propriedades organolépticas, físico-químicas e bacteriológicas dos alimentos, conservando-as até o fim da vida útil dos produtos, sem adição de quaisquer produtos químicos.</p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="main_abouts">
+					<div class="col-md-6 col-sm-6 col-xs-12 pull-right">
+						<div class="single_abouts wow slideInRight" data-wow-duration="2s">
+							<div class="head_title text-center">
+								<h2>COMO É FEITA</h2>
+								<div class="separetor"></div>
+					</div>
+					<div class="col-md-12 col-sm-12 col-xs-12">
+						<div class="single_abouts wow slideInRight text-left" data-wow-duration="2s">
+							<p>No processo operacional do leite, por exemplo, é necessário um prévio manejo da higiene na vaca para a obtenção de uma boa assepsia na ordenha. A ordenha pode ser manual ou mecânica. A assepsia do ordenhador e de seu equipamento também são muito estritas. Os procedimentos e higiene para a assepsia do equipamento extrator e coletor do leite serão detalhados por nós, na realização da consultoria.
+A "vivianização" é realizada imediatamente após a ordenha e não requer resfriamento do leite, que apenas é submetido à prévia filtração.</p>
+					</div>
 				</div>
 			</div>
 		</div>
 	</section><!-- End of Abouts Section -->
-
 	<!-- STRAT SCROLL TO TOP -->
 	
 	<div class="scrollup">
