Ajuste - fonte menu e vivianização

--- a/vivianizacao.html
+++ b/vivianizacao.html
@@ -88,7 +88,7 @@
 				<div class="features_content">
 					<div class="col-md-12 text-center">
 						<div class="sinle_features wow slideInUp" data-wow-duration="1s">
-							<p>Criado por Viviano Cabrera Trigo, a <strong>vivianização</strong> é um processo seguro de conservação de alimentos
+							<p style="font-size: 21px;">Criado por Viviano Cabrera Trigo, a <strong>vivianização</strong> é um processo seguro de conservação de alimentos
 						O processo de vivianização pode ser aplicado em diversos alimentos, abaixo citamos o leite como exemplo. </p>
 							
 						</div>
@@ -117,6 +117,7 @@
 					</div>
 					<div class="col-md-3">
 						<div class="sinle_features wow slideInUp text-right" data-wow-duration="1s">
+							<p></p>
 							<p>Maiorx despesa ao consumidor <img src="images/check-white.png" /></p>
 							<br/>
 							<p>Menor validade <img src="images/check-white.png" /></p>
@@ -141,38 +142,45 @@
 	
 	
 <section id="abouts" class="abouts sections vi">
-		<div class="container">
+		<div class="">
 			<div class="row">
 				<div class="main_abouts">
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<div class="single_abouts wow slideInLeft" data-wow-duration="2s">
 							<div class="head_title text-center">
-								<h2>O QUE É</h2>
+								<h2>O QUE É?</h2>
 								<div class="separetor"></div>
-					</div>
+							</div>
+						</div>
+					</div>	
 					<div class="col-md-12 col-sm-12 col-xs-12">
 						<div class="single_abouts wow slideInLeft text-left" data-wow-duration="2s">
 							<p>É um processo seguro e natural para a conservação de alimentos em geral, em relação a outros processos atualmente usados, realizado com procedimentos economicamente ao alcance de qualquer pequeno produtor. No caso do leite, por exemplo, permite a estocagem no meio ambiente por dez dias ou mais, a temperaturas que não requerem grande consumo de eletricidade.
 Mantém as propriedades organolépticas, físico-químicas e bacteriológicas dos alimentos, conservando-as até o fim da vida útil dos produtos, sem adição de quaisquer produtos químicos.</p>
+						</div>
 					</div>
 				</div>
 			</div>
+			<br/><br/><br/><br/>
 			<div class="row">
 				<div class="main_abouts">
 					<div class="col-md-6 col-sm-6 col-xs-12 pull-right">
 						<div class="single_abouts wow slideInRight" data-wow-duration="2s">
 							<div class="head_title text-center">
-								<h2>COMO É FEITA</h2>
+								<h2>COMO É FEITA?</h2>
 								<div class="separetor"></div>
-					</div>
+							</div>
+						</div>
+					</div>	
 					<div class="col-md-12 col-sm-12 col-xs-12">
-						<div class="single_abouts wow slideInRight text-left" data-wow-duration="2s">
+						<div class="single_abouts wow slideInRight text-right" data-wow-duration="2s">
 							<p>No processo operacional do leite, por exemplo, é necessário um prévio manejo da higiene na vaca para a obtenção de uma boa assepsia na ordenha. A ordenha pode ser manual ou mecânica. A assepsia do ordenhador e de seu equipamento também são muito estritas. Os procedimentos e higiene para a assepsia do equipamento extrator e coletor do leite serão detalhados por nós, na realização da consultoria.
 A "vivianização" é realizada imediatamente após a ordenha e não requer resfriamento do leite, que apenas é submetido à prévia filtração.</p>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
+		</div>	
 	</section><!-- End of Abouts Section -->
 	<!-- STRAT SCROLL TO TOP -->
 	
