--- a/consultoria.html
+++ b/consultoria.html
@@ -5,8 +5,7 @@
 	<title>Instituto Alimentos</title>
 	<link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css" />
 	<link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,700,300italic' rel='stylesheet' type='text/css'>
-	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Shadows+Into+Light+Two|Patrick+Hand" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Shadows+Into+Light+Two|Merienda" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Shadows+Into+Light+Two|Merienda|Satisfy|Lobster+Two" rel="stylesheet">
 	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/animat/animate.min.css" />
 	<link rel="stylesheet" href="css/fancybox/jquery.fancybox.css" />
@@ -15,18 +14,16 @@
 	<link rel="stylesheet" href="css/owl-carousel/owl.carousel.css" />
 	<link rel="stylesheet" href="css/owl-carousel/owl.theme.css" />
 	<link rel="stylesheet" href="css/owl-carousel/owl.transitions.css">
-	
 	<link rel="stylesheet" href="css/style.css" />
 	<link rel="stylesheet" href="css/responsive.css" />
-
 	<link rel="shortcut icon" href="logo/favicon.png" />
 </head>
 <body>
 
 
-	<div class='preloader'><div class='loaded'>&nbsp;</div></div>
+	<!-- <div class='preloader'><div class='loaded'>&nbsp;</div></div> -->
 	<header class="header">
-		<div class="main_menu_bg navbar-fixed-top wow slideInDown" data-wow-duration="1s">
+		<div class="main_menu_bg navbar-fixed-top wow slideInDown menu_page" data-wow-duration="1s">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-3 col-sm-3">
@@ -63,8 +60,8 @@
 								  </div>
 								</div>
 							</li>
-							<li><a href="#livros">LIVROS</a></li>
-							<li><a href="#info">INFORMAÇÕES</a></li>
+							<li><a href="livros.html">LIVROS</a></li>
+							<li><a href="info.html">INFORMAÇÕES</a></li>
 							<li><a href="#noticias">NOTÍCIAS</a></li>
 							<li><a href="#contato">CONTATO</a></li>
 						  </ul>
@@ -90,27 +87,27 @@
 					<div class="col-md-12 col-sm-12 col-xs-12">
 						<div class="single_abouts wow " data-wow-duration="2s">
 					<ul>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
+					  <li class="wow zoomIn" data-wow-duration="2s">
 					  	<img src="images/check.png" class="check" />Assessoramos para a obtenção de maior “vida útil” em  produtos alimentares, o que contribui para uma mais efetiva comercialização do  seu produto; assim, podemos solucionar problemas como fermentação precoce de  matérias primas e produtos finais.</li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
+					  <li class="wow zoomIn" data-wow-duration="2s">
 					  	<img src="images/check.png" class="check" />Apontaremos as soluções para problemas como a oxidação  enzimática de alimentos e matérias primas (alterações de cor e obscurecimentos)  em matérias-primas em geral.</li>
 
 					  <img src="images/servicos.png" width="509" height="318" class="wow slideInRight pull-right" data-wow-duration="2s">
-					  <li class="wow slideInLeft" data-wow-duration="2s">
+					  <li class="wow zoomIn" data-wow-duration="2s">
 					  	<img src="images/check.png" class="check" />Orientamos na seleção de matérias-primas economicamente  viáveis para a fabricação de alimentos. </li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
+					  <li class="wow zoomIn" data-wow-duration="2s">
 					  	<img src="images/check.png" class="check" />Recomendamos parâmetros físico-químicos, tecnológicos  e microbiológicos para produtos alimentares em processamento e produtos finais.</li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
+					  <li class="wow zoomIn" data-wow-duration="2s">
 					  	<img src="images/check.png" class="check" />Assessoramos no uso correto e na avaliação de qualidade  de produtos para sanitização e higiene de equipamentos e ambientes (sabões,  detergentes e desinfetantes). Treinamos seu pessoal no uso dos "<em>VCTests</em>", que indicarão a  efetividade e a economia obtidas. </li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
+					  <li class="wow zoomIn" data-wow-duration="2s">
 					  	<img src="images/check.png" class="check" />Oferecemos serviço de controle microscópico e  estereoscópico de sua produção e matéria primas de produção. </li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
+					  <li class="wow zoomIn" data-wow-duration="2s">
 					  	<img src="images/check.png" class="check" />Oferecemos um serviço completo de controle de corpos  estranhos em sua produção (fragmentos de inseto, ácaros, sinais de roedores em  seu produto e matérias primas). Mediante a recepção de amostras (via correio), realizamos  o diagnóstico estereoscópico e microscópico da qualidade de seu produto.</li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
+					  <li class="wow zoomIn" data-wow-duration="2s">
 					  	<img src="images/check.png" class="check" />Podemos transferir nossa tecnologia, com a qual se  prolonga a “vida útil”, as características originais e a qualidade de seu produto  (“<strong>vivianização</strong>”).</li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
+					  <li class="wow zoomIn" data-wow-duration="2s">
 					  	<img src="images/check.png" class="check" />Consulte-nos também outras necessidades, que procuraremos  ajudá-lo.</li>
-					   <li class="wow slideInLeft" data-wow-duration="2s">
+					   <li class="wow zoomIn" data-wow-duration="2s">
 					  	<img src="images/check.png" class="check" />Para   solicitar uma consultoria <a href="contato.html">clique aqui</a> ou entre em contato por telefone.   Assim que tivermos um parecer sobre suas necessidades encaminharemos um   orçamento pelos serviços do <strong>Assessoria e Consultoria</strong>.&nbsp; Após a confirmação do deposito no valor   estipulado, enviaremos um documento com as soluções e referencias necessárias   para esclarecimento da situação.</li>
 					</ul>
 						</div>
@@ -120,6 +117,10 @@
 			</div>
 		</div>
 	</section><!-- End of Abouts Section -->
+
+	<section class="rodape" >
+		<p>2019 &copy; <a href="mailto:maria.piontkowski@hotmail.com">Maria Cecília Piontkowski Alves</a></p>
+	</section>
 	
 	
 <!--<section id="abouts" class="abouts sections">
@@ -129,26 +130,26 @@
 					<div class="col-md-12 col-sm-12 col-xs-12">
 						<div class="single_abouts wow " data-wow-duration="2s">
 					<ul>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
+					  <li class="wow zoomIn" data-wow-duration="2s">
 					  	<img src="images/check.png" class="check" />Assessoramos para a obtenção de maior “vida útil” em  produtos alimentares, o que contribui para uma mais efetiva comercialização do  seu produto; assim, podemos solucionar problemas como fermentação precoce de  matérias primas e produtos finais.</li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
+					  <li class="wow zoomIn" data-wow-duration="2s">
 					  	<img src="images/check.png" class="check" />Apontaremos as soluções para problemas como a oxidação  enzimática de alimentos e matérias primas (alterações de cor e obscurecimentos)  em matérias-primas em geral.</li>
 
 					  <img src="images/servicos.png" width="509" height="318" class="wow slideInRight pull-right" data-wow-duration="2s">
-					  <li class="wow slideInLeft" data-wow-duration="2s">
+					  <li class="wow zoomIn" data-wow-duration="2s">
 					  	<img src="images/check.png" class="check" />Orientamos na seleção de matérias-primas economicamente  viáveis para a fabricação de alimentos. </li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
+					  <li class="wow zoomIn" data-wow-duration="2s">
 					  	<img src="images/check.png" class="check" />Recomendamos parâmetros físico-químicos, tecnológicos  e microbiológicos para produtos alimentares em processamento e produtos finais.</li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
+					  <li class="wow zoomIn" data-wow-duration="2s">
 					  	<img src="images/check.png" class="check" />Assessoramos no uso correto e na avaliação de qualidade  de produtos para sanitização e higiene de equipamentos e ambientes (sabões,  detergentes e desinfetantes). Treinamos seu pessoal no uso dos "<em>VCTests</em>", que indicarão a  efetividade e a economia obtidas. </li>
 					  <li class="slideInLeft"/>Oferecemos serviço de controle microscópico e  estereoscópico de sua produção e matéria primas de produção. </li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
+					  <li class="wow zoomIn" data-wow-duration="2s">
 					  	<img src="images/check.png" class="check" />Oferecemos um serviço completo de controle de corpos  estranhos em sua produção (fragmentos de inseto, ácaros, sinais de roedores em  seu produto e matérias primas). Mediante a recepção de amostras (via correio), realizamos  o diagnóstico estereoscópico e microscópico da qualidade de seu produto.</li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
+					  <li class="wow zoomIn" data-wow-duration="2s">
 					  	<img src="images/check.png" class="check" />Podemos transferir nossa tecnologia, com a qual se  prolonga a “vida útil”, as características originais e a qualidade de seu produto  (“<strong>vivianização</strong>”).</li>
-					  <li class="wow slideInLeft" data-wow-duration="2s">
+					  <li class="wow zoomIn" data-wow-duration="2s">
 					  	<img src="images/check.png" class="check" />Consulte-nos também outras necessidades, que procuraremos  ajudá-lo.</li>
-					   <li class="wow slideInLeft" data-wow-duration="2s">
+					   <li class="wow zoomIn" data-wow-duration="2s">
 					  	<img src="images/check.png" class="check" />Para   solicitar uma consultoria <a href="contato.html">clique aqui</a> ou entre em contato por telefone.   Assim que tivermos um parecer sobre suas necessidades encaminharemos um   orçamento pelos serviços do <strong>Assessoria e Consultoria</strong>.&nbsp; Após a confirmação do deposito no valor   estipulado, enviaremos um documento com as soluções e referencias necessárias   para esclarecimento da situação.</li>
 					</ul>
 						</div>
