--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 								  </div>
 								</div>
 							</li>
-							<li><a href="#livros">LIVROS</a></li>
-							<li><a href="#info">INFORMAÇÕES</a></li>
+							<li><a href="livros.html">LIVROS</a></li>
+							<li><a href="info.html">INFORMAÇÕES</a></li>
 							<li><a href="#noticias">NOTÍCIAS</a></li>
 							<li><a href="#contato">CONTATO</a></li>
 						  </ul>
@@ -130,7 +130,7 @@
 
 	<section id="features" class="features">
 		<div class="container">
-			<div class=".sinle_features separetor invert"></div>
+			<div class="sinle_features separetor invert"></div>
 			<div class="row">
 				<div class="features_content text-right">
 					<div class="col-md-3">
@@ -148,154 +148,7 @@
 				</div>
 			</div>
 		</div>
-	</section><!-- End of Abouts Section -->	
-
-	
-	<!--<section id="special" class="special sections">
-		<div class="container">
-			<div class="row">
-				<div class="head_title text-center wow slideInLeft" data-wow-duration="1.5s">
-					<h2>This month specials</h2>
-					<div class="separetor"></div>
-				</div>
-				<div class="main_special text-center wow slideInUp" data-wow-duration="3s">
-					
-					<div class="col-md-2 col-sm-3 col-xs-6 single_special">
-						<div class="single_special_img">
-							<img src="images/s1.png" alt="" />
-							<div class="single_special_overlay text-center">
-								<h3>Greens fava</h3>
-								<div class="overlay_separetor"></div>
-								<p>Lorem ipsum dolor sit Pellentesque vel enim a</p>
-								<p>17$</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-2 col-sm-3 col-xs-6 single_special">
-						<div class="single_special_img">
-							<img src="images/p2.jpg" alt="" />
-							<div class="single_special_overlay text-center">
-								<h3>Greens fava</h3>
-								<div class="overlay_separetor"></div>
-								<p>Lorem ipsum dolor sit Pellentesque vel enim a</p>
-								<p>17$</p>
-							</div>							
-						</div>
-					</div>
-					<div class="col-md-2 col-sm-3 col-xs-6 single_special">
-						<div class="single_special_img">
-							<img src="images/p3.jpg" alt="" />
-							<div class="single_special_overlay text-center">
-								<h3>Greens fava</h3>
-								<div class="overlay_separetor"></div>
-								<p>Lorem ipsum dolor sit Pellentesque vel enim a</p>
-								<p>17$</p>
-							</div>							
-						</div>
-					</div>
-					<div class="col-md-2 col-sm-3 col-xs-6 single_special">
-						<div class="single_special_img">
-							<img src="images/p4.jpg" alt="" />
-							<div class="single_special_overlay text-center">
-								<h3>Greens fava</h3>
-								<div class="overlay_separetor"></div>
-								<p>Lorem ipsum dolor sit Pellentesque vel enim a</p>
-								<p>17$</p>
-							</div>							
-						</div>
-					</div>
-					<div class="col-md-2 col-sm-3 col-xs-6 single_special">
-						<div class="single_special_img">
-							<img src="images/p5.jpg" alt="" />
-							<div class="single_special_overlay text-center">
-								<h3>Greens fava</h3>
-								<div class="overlay_separetor"></div>
-								<p>Lorem ipsum dolor sit Pellentesque vel enim a</p>
-								<p>17$</p>
-							</div>							
-						</div>
-					</div>
-					<div class="col-md-2 col-sm-3 col-xs-6 single_special">
-						<div class="single_special_img">
-							<img src="images/p6.jpg" alt="" />
-							<div class="single_special_overlay text-center">
-								<h3>Greens fava</h3>
-								<div class="overlay_separetor"></div>
-								<p>Lorem ipsum dolor sit Pellentesque vel enim a</p>
-								<p>17$</p>
-							</div>							
-						</div>
-					</div>
-					<div class="col-md-2 col-sm-3 col-xs-6 single_special">
-						<div class="single_special_img">
-							<img src="images/p6.jpg" alt="" />
-							<div class="single_special_overlay text-center">
-								<h3>Greens fava</h3>
-								<div class="overlay_separetor"></div>
-								<p>Lorem ipsum dolor sit Pellentesque vel enim a</p>
-								<p>17$</p>
-							</div>							
-						</div>
-					</div>
-					<div class="col-md-2 col-sm-3 col-xs-6 single_special">
-						<div class="single_special_img">
-							<img src="images/p5.jpg" alt="" />
-							<div class="single_special_overlay text-center">
-								<h3>Greens fava</h3>
-								<div class="overlay_separetor"></div>
-								<p>Lorem ipsum dolor sit Pellentesque vel enim a</p>
-								<p>17$</p>
-							</div>							
-						</div>
-					</div>
-					<div class="col-md-2 col-sm-3 col-xs-6 single_special">
-						<div class="single_special_img">
-							<img src="images/p4.jpg" alt="" />
-							<div class="single_special_overlay text-center">
-								<h3>Greens fava</h3>
-								<div class="overlay_separetor"></div>
-								<p>Lorem ipsum dolor sit Pellentesque vel enim a</p>
-								<p>17$</p>
-							</div>							
-						</div>
-					</div>
-					<div class="col-md-2 col-sm-3 col-xs-6 single_special">
-						<div class="single_special_img">
-							<img src="images/p3.jpg" alt="" />
-							<div class="single_special_overlay text-center">
-								<h3>Greens fava</h3>
-								<div class="overlay_separetor"></div>
-								<p>Lorem ipsum dolor sit Pellentesque vel enim a</p>
-								<p>17$</p>
-							</div>							
-						</div>
-					</div>
-					<div class="col-md-2 col-sm-3 col-xs-6 single_special">
-						<div class="single_special_img">
-							<img src="images/p2.jpg" alt="" />
-							<div class="single_special_overlay text-center">
-								<h3>Greens fava</h3>
-								<div class="overlay_separetor"></div>
-								<p>Lorem ipsum dolor sit Pellentesque vel enim a</p>
-								<p>17$</p>
-							</div>							
-						</div>
-					</div>
-					<div class="col-md-2 col-sm-3 col-xs-6 single_special">
-						<div class="single_special_img">
-							<img src="images/s1.png" alt="" />
-							<div class="single_special_overlay text-center">
-								<h3>Greens fava</h3>
-								<div class="overlay_separetor"></div>
-								<p>Lorem ipsum dolor sit Pellentesque vel enim a</p>
-								<p>17$</p>
-							</div>							
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>-->
+	</section><!-- End of Abouts Section -->
 	
 	<section id="abouts" class="abouts sections">
 		<div class="container">
@@ -349,12 +202,17 @@
 							<br/>
 							<p><img src="images/check.png" /> Acessoria para melhor aproveitamento de insumos para limpeza de equipamentos/ambientes.</p>
 							<br/>
-							<p><img src="?images/check.png" /> Assessoria na criação de procedimentos e treinamento de assepsia na produção.</p>
+							<p><img src="images/check.png" /> Assessoria na criação de procedimentos e treinamento de assepsia na produção.</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section><!-- End of Abouts Section -->
+
+
+	<section class="rodape" >
+		<p>2019 &copy; <a href="mailto:maria.piontkowski@hotmail.com">Maria Cecília Piontkowski Alves</a></p>
+	</section>
 
 	
 </div>	
