--- a/consultoria.html
+++ b/consultoria.html
@@ -61,9 +61,9 @@
 								</div>
 							</li>
 							<li><a href="livros.html">LIVROS</a></li>
-							<li><a href="info.html">INFORMAÇÕES</a></li>
-							<li><a href="#noticias">NOTÍCIAS</a></li>
-							<li><a href="#contato">CONTATO</a></li>
+							<li class="hidden"><a href="informacoes.html">INFORMAÇÕES</a></li>
+							<li class="hidden"><a href="noticias.html">NOTÍCIAS</a></li>
+							<li><a href="contato.html">CONTATO</a></li>
 						  </ul>
 						</div><!-- /.navbar-collapse -->
 					  </div><!-- /.container-fluid -->
@@ -85,31 +85,31 @@
 			<div class="row">
 				<div class="main_abouts main_servicos">
 					<div class="col-md-12 col-sm-12 col-xs-12">
-						<div class="single_abouts wow " data-wow-duration="2s">
-					<ul>
-					  <li class="wow zoomIn" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Assessoramos para a obtenção de maior “vida útil” em  produtos alimentares, o que contribui para uma mais efetiva comercialização do  seu produto; assim, podemos solucionar problemas como fermentação precoce de  matérias primas e produtos finais.</li>
-					  <li class="wow zoomIn" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Apontaremos as soluções para problemas como a oxidação  enzimática de alimentos e matérias primas (alterações de cor e obscurecimentos)  em matérias-primas em geral.</li>
+						<div class="single_abouts wow zoomIn " data-wow-duration="2s">
+							<ul>
+							  <li>
+							  	<img src="images/check.png" class="check" />Assessoramos para a obtenção de maior “vida útil” em  produtos alimentares, o que contribui para uma mais efetiva comercialização do  seu produto; assim, podemos solucionar problemas como fermentação precoce de  matérias primas e produtos finais.</li>
+							  <li>
+							  	<img src="images/check.png" class="check" />Apontaremos as soluções para problemas como a oxidação  enzimática de alimentos e matérias primas (alterações de cor e obscurecimentos)  em matérias-primas em geral.</li>
 
-					  <img src="images/servicos.png" width="509" height="318" class="wow slideInRight pull-right" data-wow-duration="2s">
-					  <li class="wow zoomIn" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Orientamos na seleção de matérias-primas economicamente  viáveis para a fabricação de alimentos. </li>
-					  <li class="wow zoomIn" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Recomendamos parâmetros físico-químicos, tecnológicos  e microbiológicos para produtos alimentares em processamento e produtos finais.</li>
-					  <li class="wow zoomIn" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Assessoramos no uso correto e na avaliação de qualidade  de produtos para sanitização e higiene de equipamentos e ambientes (sabões,  detergentes e desinfetantes). Treinamos seu pessoal no uso dos "<em>VCTests</em>", que indicarão a  efetividade e a economia obtidas. </li>
-					  <li class="wow zoomIn" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Oferecemos serviço de controle microscópico e  estereoscópico de sua produção e matéria primas de produção. </li>
-					  <li class="wow zoomIn" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Oferecemos um serviço completo de controle de corpos  estranhos em sua produção (fragmentos de inseto, ácaros, sinais de roedores em  seu produto e matérias primas). Mediante a recepção de amostras (via correio), realizamos  o diagnóstico estereoscópico e microscópico da qualidade de seu produto.</li>
-					  <li class="wow zoomIn" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Podemos transferir nossa tecnologia, com a qual se  prolonga a “vida útil”, as características originais e a qualidade de seu produto  (“<strong>vivianização</strong>”).</li>
-					  <li class="wow zoomIn" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Consulte-nos também outras necessidades, que procuraremos  ajudá-lo.</li>
-					   <li class="wow zoomIn" data-wow-duration="2s">
-					  	<img src="images/check.png" class="check" />Para   solicitar uma consultoria <a href="contato.html">clique aqui</a> ou entre em contato por telefone.   Assim que tivermos um parecer sobre suas necessidades encaminharemos um   orçamento pelos serviços do <strong>Assessoria e Consultoria</strong>.&nbsp; Após a confirmação do deposito no valor   estipulado, enviaremos um documento com as soluções e referencias necessárias   para esclarecimento da situação.</li>
-					</ul>
+							  <!--<img src="images/servicos.png" width="509" height="318" class="wow slideInRight pull-right" data-wow-duration="2s">-->
+							  <li>
+							  	<img src="images/check.png" class="check" />Orientamos na seleção de matérias-primas economicamente  viáveis para a fabricação de alimentos. </li>
+							  <li>
+							  	<img src="images/check.png" class="check" />Recomendamos parâmetros físico-químicos, tecnológicos  e microbiológicos para produtos alimentares em processamento e produtos finais.</li>
+							  <li>
+							  	<img src="images/check.png" class="check" />Assessoramos no uso correto e na avaliação de qualidade  de produtos para sanitização e higiene de equipamentos e ambientes (sabões,  detergentes e desinfetantes). Treinamos seu pessoal no uso dos "<em>VCTests</em>", que indicarão a  efetividade e a economia obtidas. </li>
+							  <li>
+							  	<img src="images/check.png" class="check" />Oferecemos serviço de controle microscópico e  estereoscópico de sua produção e matéria primas de produção. </li>
+							  <li>
+							  	<img src="images/check.png" class="check" />Oferecemos um serviço completo de controle de corpos  estranhos em sua produção (fragmentos de inseto, ácaros, sinais de roedores em  seu produto e matérias primas). Mediante a recepção de amostras (via correio), realizamos  o diagnóstico estereoscópico e microscópico da qualidade de seu produto.</li>
+							  <li>
+							  	<img src="images/check.png" class="check" />Podemos transferir nossa tecnologia, com a qual se  prolonga a “vida útil”, as características originais e a qualidade de seu produto  (“<strong>vivianização</strong>”).</li>
+							  <li>
+							  	<img src="images/check.png" class="check" />Consulte-nos também outras necessidades, que procuraremos  ajudá-lo.</li>
+							   <li>
+							  	<img src="images/check.png" class="check" />Para   solicitar uma consultoria <a href="contato.html">clique aqui</a> ou entre em contato por telefone.   Assim que tivermos um parecer sobre suas necessidades encaminharemos um   orçamento pelos serviços do <strong>Assessoria e Consultoria</strong>.&nbsp; Após a confirmação do deposito no valor   estipulado, enviaremos um documento com as soluções e referencias necessárias   para esclarecimento da situação.</li>
+							</ul>
 						</div>
 					</div>
 
@@ -130,26 +130,26 @@
 					<div class="col-md-12 col-sm-12 col-xs-12">
 						<div class="single_abouts wow " data-wow-duration="2s">
 					<ul>
-					  <li class="wow zoomIn" data-wow-duration="2s">
+					  <li>
 					  	<img src="images/check.png" class="check" />Assessoramos para a obtenção de maior “vida útil” em  produtos alimentares, o que contribui para uma mais efetiva comercialização do  seu produto; assim, podemos solucionar problemas como fermentação precoce de  matérias primas e produtos finais.</li>
-					  <li class="wow zoomIn" data-wow-duration="2s">
+					  <li>
 					  	<img src="images/check.png" class="check" />Apontaremos as soluções para problemas como a oxidação  enzimática de alimentos e matérias primas (alterações de cor e obscurecimentos)  em matérias-primas em geral.</li>
 
 					  <img src="images/servicos.png" width="509" height="318" class="wow slideInRight pull-right" data-wow-duration="2s">
-					  <li class="wow zoomIn" data-wow-duration="2s">
+					  <li>
 					  	<img src="images/check.png" class="check" />Orientamos na seleção de matérias-primas economicamente  viáveis para a fabricação de alimentos. </li>
-					  <li class="wow zoomIn" data-wow-duration="2s">
+					  <li>
 					  	<img src="images/check.png" class="check" />Recomendamos parâmetros físico-químicos, tecnológicos  e microbiológicos para produtos alimentares em processamento e produtos finais.</li>
-					  <li class="wow zoomIn" data-wow-duration="2s">
+					  <li>
 					  	<img src="images/check.png" class="check" />Assessoramos no uso correto e na avaliação de qualidade  de produtos para sanitização e higiene de equipamentos e ambientes (sabões,  detergentes e desinfetantes). Treinamos seu pessoal no uso dos "<em>VCTests</em>", que indicarão a  efetividade e a economia obtidas. </li>
 					  <li class="slideInLeft"/>Oferecemos serviço de controle microscópico e  estereoscópico de sua produção e matéria primas de produção. </li>
-					  <li class="wow zoomIn" data-wow-duration="2s">
+					  <li>
 					  	<img src="images/check.png" class="check" />Oferecemos um serviço completo de controle de corpos  estranhos em sua produção (fragmentos de inseto, ácaros, sinais de roedores em  seu produto e matérias primas). Mediante a recepção de amostras (via correio), realizamos  o diagnóstico estereoscópico e microscópico da qualidade de seu produto.</li>
-					  <li class="wow zoomIn" data-wow-duration="2s">
+					  <li>
 					  	<img src="images/check.png" class="check" />Podemos transferir nossa tecnologia, com a qual se  prolonga a “vida útil”, as características originais e a qualidade de seu produto  (“<strong>vivianização</strong>”).</li>
-					  <li class="wow zoomIn" data-wow-duration="2s">
+					  <li>
 					  	<img src="images/check.png" class="check" />Consulte-nos também outras necessidades, que procuraremos  ajudá-lo.</li>
-					   <li class="wow zoomIn" data-wow-duration="2s">
+					   <li>
 					  	<img src="images/check.png" class="check" />Para   solicitar uma consultoria <a href="contato.html">clique aqui</a> ou entre em contato por telefone.   Assim que tivermos um parecer sobre suas necessidades encaminharemos um   orçamento pelos serviços do <strong>Assessoria e Consultoria</strong>.&nbsp; Após a confirmação do deposito no valor   estipulado, enviaremos um documento com as soluções e referencias necessárias   para esclarecimento da situação.</li>
 					</ul>
 						</div>
