--- a/info.html
+++ b/info.html
@@ -60,10 +60,10 @@
 									  </div>
 									</div>
 								</li>
-								<li class="active"><a href="livros.html">LIVROS</a></li>
-								<li><a href="info.html">INFORMAÇÕES</a></li>
-								<li><a href="#noticias">NOTÍCIAS</a></li>
-								<li><a href="#contato">CONTATO</a></li>
+								<li><a href="livros.html">LIVROS</a></li>
+								<li class="active"><a href="informacoes.html">INFORMAÇÕES</a></li>
+								<li><a href="noticias.html">NOTÍCIAS</a></li>
+								<li><a href="contato.html">CONTATO</a></li>
 							  </ul>
 							</div><!-- /.navbar-collapse -->
 					  </div><!-- /.container-fluid -->
@@ -80,44 +80,6 @@
 	
 	<section id="banner" class="banner menu"></section><!-- End of Banner Section -->
 	
-<section id="abouts" class="abouts sections li meat">
-		<div class="container">
-			<div class="row">
-				<div class="main_abouts wow zoomIn" data-wow-duration="2s">
-					<div class="col-md-6 col-sm-6 col-xs-12">
-						<div class="single_abouts">
-							<div class="head_title text-center">
-								<h2>INFORMAÇÃO AO PROFISSIONAL</h2>
-								<div class="separetor"></div>
-							</div>
-						</div>
-					</div>	
-					<div class="col-md-12 col-sm-12 col-xs-12">
-						<div class="single_abouts text-left">
-							<p><b>FAROFA ALGUMAS VEZES É A CAUSA DE TOXI-ALIMENTAÇÃO</b></p>
-							<p class="minus">Este prato genuinamente á base de farinha de mandioca crua, farinha de milho, carnes suína manufaturadas e defumad...</p>
-							<br><br/>
-
-							<p><b>CONTRIBUIMOS PARA UM EMPRENDIMENTO A SE TORNAR UM BOM NOGOCIO AMANHA</b></p>
-							<p class="minus">A fabricação artesanal de pamonha para sua venda em supermercados “não decola” por apresentar c...</p>
-							<br><br/>
-
-							<p><b>UMA FÁCIL SOLUÇÃO PARA FREQUENTE QUEDA DA QUALIDADE EM EMBUTIDOS</b></p>
-							<p class="minus">A constante procura para solucionar problemas que se apresentam no dia a dia em salameria nos foi proposta e agora com nova expe...</p>
-							<br><br/>
-
-							<p><b>Método para Sanificação de Verduras Consumidas Cruas</b></p>
-							<p class="minus">Folhas de alface, agrião e outras verduras cruas que consumimos como salada e os frutos, estão as vezes cont...</p>
-							<br><br/>
-						</div>
-					</div>
-				</div>
-			</div>
-
-		</div>	
-	</section>
-
-
 
 
 	<section class="rodape" >
