--- a/livros.html
+++ b/livros.html
@@ -61,9 +61,9 @@
 									</div>
 								</li>
 								<li class="active"><a href="livros.html">LIVROS</a></li>
-								<li><a href="info.html">INFORMAÇÕES</a></li>
-								<li><a href="#noticias">NOTÍCIAS</a></li>
-								<li><a href="#contato">CONTATO</a></li>
+								<li><a href="informacoes.html">INFORMAÇÕES</a></li>
+								<li><a href="noticias.html">NOTÍCIAS</a></li>
+								<li><a href="contato.html">CONTATO</a></li>
 							  </ul>
 							</div><!-- /.navbar-collapse -->
 					  </div><!-- /.container-fluid -->
@@ -137,14 +137,14 @@
 					<div class="col-md-8 col-sm-8 col-xs-12">
 						<div class="single_abouts">
 							<div class="head_title text-center">
-								<a href="http://alimentos.bio.br/site/Memorias_Profissionais.pdf" target="_blank"><h2>Memórias profissionais de um Pioneiro</h2></a>
+								<a href="http://alimentos.bio.br/site/Memorias_Profissionais.pdf" target="_blank"><h2>Lições de um Pioneiro</h2></a>
 								<div class="separetor"></div>
 								<p><a href="http://www.alimentos.bio.br/site/memorias.pdf" target="_blank">Viviano Cabrera Trigo</a></p>
 							</div>
 						</div>
 
 						<div class="single_abouts text-left">
-							<p>O livro <b>Memórias profissionais de um Pioneiro</b> traz as lembranças e experiências do Microbiologista de alimentos e sanitarista, <a href="http://www.alimentos.bio.br/site/memorias.pdf" target="_blank"><b>Viviano Cabrera Trigo</b></a>, que criou diversas metodologias sanitárias utilizadas nas cozinhas industriais no Brasil e no mundo.
+							<p>O livro <b>Lições de um Pioneiro</b> traz as lembranças e experiências do Microbiologista de alimentos e sanitarista, <a href="http://www.alimentos.bio.br/site/memorias.pdf" target="_blank"><b>Viviano Cabrera Trigo</b></a>, que criou diversas metodologias sanitárias utilizadas nas cozinhas industriais no Brasil e no mundo.
 
 							<p>Suas experiências grandes em empresas como Varig e Knorr, a atuação na área de controle de qualidade e pesquisas em toda America Latina, além da realização de palestras e seminários científicos no Brasil e exterior. Além de alguns dos métodos por ele criados.</p>
 							<br/><br/>
