--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 						<div class="sinle_features wow slideInUp" data-wow-duration="1s">
 							<h5>Você sabia?</h5>
 							<br/>
-							<p>Na década de 70, Viviano Cabrera sugeriu o lacre utilizado por baixo da tampa, técnica utilizada até hoje em embalagens de alimentos presentes em nosso dia a dia.</p>
+							<p>Na década de 70, Viviano Cabrera sugeriu o filme que veda o bocal de embalagens de produtos hermeticamente, evitando contaminações microbiológicas e a entrada de corpos estranhos ou a violação da pureza de preodutos tais como maionese, pós acholatados para o preparo de bebidas lácteas e outros. Essa técnica é utilizada até hoje em embalagens de alimentos presentes em nosso dia a dia.</p>
 						</div>
 					</div>
 				</div>
@@ -162,13 +162,14 @@
 							</div>
 							
 							<br/>
+							<p><img src="images/check.png" /> Menor custo de produção.</p>
+							<br/>
 							<p><img src="images/check.png" /> Mais qualidade e conservação.</p>
 							<br/>
 							<p><img src="images/check.png" /> Menos conservantes.</p>
 							<br/>
 							<p><img src="images/check.png" /> Maior vida útil.</p>
-							<br/>
-							<p><img src="images/check.png" /> Menos custo de produção.</p>
+							
 					</div>
 				</div>
 				<div class="col-md-6 col-sm-6 col-xs-12">
