--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 						<div class="sinle_features wow slideInUp" data-wow-duration="1s">
 							<h5>Você sabia?</h5>
 							<br/>
-							<p>Na década de 70, Viviano Cabrera sugeriu o filme que veda o bocal de embalagens de produtos hermeticamente, evitando contaminações microbiológicas e a entrada de corpos estranhos ou a violação da pureza de preodutos tais como maionese, pós acholatados para o preparo de bebidas lácteas e outros. Essa técnica é utilizada até hoje em embalagens de alimentos presentes em nosso dia a dia.</p>
+							<p>Na década de 70, Viviano Cabrera Trigo sugeriu o filme que veda o bocal de embalagens de produtos hermeticamente, evitando contaminações microbiológicas e a entrada de corpos estranhos ou a violação da pureza de preodutos tais como maionese, pós achocolatados para o preparo de bebidas lácteas e outros. Esse método é utilizada até hoje em embalagens de alimentos presentes em nosso dia a dia nos produtos achados na praça.</p>
 						</div>
 					</div>
 				</div>
@@ -199,6 +199,10 @@
 					</div>
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<div class="single_abouts xs wow slideInRight" data-wow-duration="2s">
+							<p><img src="images/check.png" /> Redução dos custos de produção.</p>
+							<br/>
+							<p><img src="images/check.png" /> Acessoria no transporte dos alimentos produzidos na cozinha em médias distâncias sem o uso de resfriamento para sua conservação.</p>
+							<br/>
 							<p><img src="images/check.png" /> Adequação Sanitária e Higiênica em processos operacionais de alimentos.</p>
 							<br/>
 							<p><img src="images/check.png" /> Acessoria para melhor aproveitamento de insumos para limpeza de equipamentos/ambientes.</p>
