--- a/vivianizacao.html
+++ b/vivianizacao.html
@@ -154,7 +154,7 @@
 					<div class="col-md-12 col-sm-12 col-xs-12">
 						<div class="single_abouts text-left">
 							<p>É um processo seguro e natural para a conservação de alimentos em geral, em relação a outros processos atualmente usados, realizado com procedimentos economicamente ao alcance de qualquer pequeno produtor. No caso do leite, por exemplo, permite a estocagem no meio ambiente por dez dias ou mais, a temperaturas que não requerem grande consumo de eletricidade.
-							Mantém as propriedades organolépticas, físico-químicas e bacteriológicas dos alimentos, conservando-as até o fim da vida útil dos produtos, sem adição de quaisquer produtos químicos.</p>
+							Mantém as propriedades organolépticas, físico-químicas e bacteriológicas do leite, conservando-as até o fim da vida útil dos produtos, sem adição de quaisquer produtos químicos. Os alimentos vivianizados podem ser transportados em meio ambiente sem necessidade de proteção pelo frio, e sua conservação exede dez a doze horas em perfeito estado de consumo.</p>
 						</div>
 					</div>
 				</div>
@@ -184,7 +184,7 @@
 					</div>	
 					<div class="col-md-12 col-sm-12 col-xs-12">
 						<div class="single_abouts text-right">
-							<p>No processo operacional do leite, por exemplo, é necessário um prévio manejo da higiene na vaca para a obtenção de uma boa assepsia na ordenha. A ordenha pode ser manual ou mecânica. A assepsia do ordenhador e de seu equipamento também são muito estritas. Os procedimentos e higiene para a assepsia do equipamento extrator e coletor do leite serão detalhados por nós, na realização da consultoria.
+							<p>No processo operacional do leite, por exemplo, é necessário um prévio manejo da higiene da vaca para a obtenção de uma boa assepsia na ordenha. A ordenha pode ser manual ou mecânica. A assepsia do ordenhador e de seu equipamento também são muito estritas. Os procedimentos e higiene para a assepsia do equipamento extrator e coletor do leite serão detalhados por nós, na realização da consultoria.
 A "vivianização" é realizada imediatamente após a ordenha e não requer resfriamento do leite, que apenas é submetido à prévia filtração.</p>
 						</div>
 					</div>
@@ -209,7 +209,7 @@ A "vivianização" é realizada imediatamente após a ordenha e não requer resf
 
 							<p><img src="images/check.png" /> Recipiente para processamento de "n" litros de leite, com seus respectivos sistemas operacionais para aquecimento.</p>
 
-							<p><img src="images/check.png" /> Sistema termométrico para medição da temperatura da operação.</p>
+							<p><img src="images/check.png" /> Sistema termométrico para medição da temperatura na operação.</p>
 
 							<p><img src="images/check.png" /> Recipiente para termo-normalização da embalagem plástica do produto com água potável corrente.
 							<p><img src="images/check.png" /> Túnel de ar para secar o produto embalado.</p>
@@ -224,7 +224,7 @@ A "vivianização" é realizada imediatamente após a ordenha e não requer resf
 		</div>
 	</section>
 
-	<section id="abouts" class="abouts sections vi">
+    <!--<section id="abouts" class="abouts sections vi">
 		<div class="container">
 			<div class="row">
 				<div class="main_abouts wow zoomIn" data-wow-duration="2s">
@@ -246,7 +246,7 @@ A "vivianização" é realizada imediatamente após a ordenha e não requer resf
 
 			
 		</div>	
-	</section>
+	</section>!-- End of Abouts Section -->
 
 	<section class="rodape" >
 		<p>2019 &copy; <a href="mailto:maria.piontkowski@hotmail.com">Maria Cecília Piontkowski Alves</a></p>
