--- a/livros.html
+++ b/livros.html
@@ -133,7 +133,7 @@
 				<div class="main_abouts wow zoomIn" data-wow-duration="2s">
 					<div class="col-md-4 col-sm-4 col-xs-12">
 						<a href="http://alimentos.bio.br/site/Memorias_Profissionais.pdf" target="_blank"><img src="images/livro2.jpg" class="livro" /></a>
-						<p><b>??? páginas - ? Edição</b></p>
+						<p><b>111 páginas - Primeira Edição</b></p>
 						<h2>R$ 35,00</h2>
 					</div>
 					<div class="col-md-8 col-sm-8 col-xs-12">
